// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items are created on startup 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/6",
        },
        "data": Object {
          "id": 6,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Profile",
      },
    ],
    "title": "Google",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/7",
        },
        "data": Object {
          "id": 7,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:43:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "POST http://jsonplaceholder.com/posts",
    "title": "12:40:00 JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:39:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts/123",
    "title": "15:01:00 JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 1. Added 3 requests and 2 history entries 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/6",
        },
        "data": Object {
          "id": 6,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Profile",
      },
    ],
    "title": "Google",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts/123",
    "title": "15:01:00 JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 2. Deleted last request in collection 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts/123",
    "title": "15:01:00 JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 3. Updated 1 request and added 3 history entries 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:43:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "POST http://jsonplaceholder.com/posts",
    "title": "12:40:00 JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:39:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts/123",
    "title": "15:01:00 JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 4. Added 6th history entry 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://google.com",
    "title": "12:50:00 ",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:43:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "POST http://jsonplaceholder.com/posts",
    "title": "12:40:00 JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:39:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 5. Deleted 1 request 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "dev",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://google.com",
    "title": "12:50:00 ",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:43:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "POST http://jsonplaceholder.com/posts",
    "title": "12:40:00 JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:39:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 6. Updated environment name 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "secondaryAction": undefined,
        "subtitle": undefined,
        "title": "Create Post",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "subtitle": "prod",
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://google.com",
    "title": "12:50:00 ",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:43:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "POST http://jsonplaceholder.com/posts",
    "title": "12:40:00 JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET http://jsonplaceholder.com/posts",
    "title": "12:39:00 JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "secondaryAction": undefined,
    "subtitle": "GET https://api.googleapis.com/profile",
    "title": "15:03:00 Google / Get Profile",
  },
]
`;
